--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 yew = "0.19"
 wasm-bindgen="0.2"
+gloo = "0.10"
 
 [dependencies.web-sys]
 version = "0.3"
